# SOGLR

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: assimp.cmake  freetype.cmake  glfw.cmake  glm.cmake
examples/: 1_CreatingAWindow.cpp  2_DrawingATriangle.cpp  3_RainbowTriangle.cpp  4_TexturedQuad.cpp  5_Cameras.cpp  6_Scenes.cpp  7_RenderText.cpp  CMakeLists.txt
examples/assets/models/Cube/: Cube.mtl
examples/shaders/: depth.frag  depth.vert  framebuffer.frag  lit.frag  lit.vert  rainbow_triangle.frag  rainbow_triangle.vert  simple_triangle.frag  simple_triangle.vert  text.frag  text.vert  unlit.frag  unlit.vert
include/SOGLR/: SOGLR.hpp
include/SOGLR/Math/: Vector.h
include/SOGLR/Rendering/: Camera.hpp  Framebuffer.hpp  IndexBuffer.hpp  Material.hpp  Mesh.hpp  Model.hpp  Primitives.hpp  RenderObject.hpp  Renderer.hpp  Scene.hpp  Shader.hpp  Texture.hpp  Transform.hpp  Vertex.hpp  VertexArrayObject.hpp  VertexBuffer.hpp  Window.hpp
include/SOGLR/Rendering/Advanced/: Shadowmap.hpp
include/SOGLR/Rendering/Lighting/: DirectionalLight.hpp
include/SOGLR/Rendering/Text/: Character.hpp  Font.hpp  FontLoader.hpp  TextRenderer.hpp
include/SOGLR/etc/: PerspectiveCameraController.hpp
src/: dummy.cpp
src/FrameBuilder/: Board.hpp
src/Math/: Vector.h
src/Rendering/: Camera.hpp  RenderObject.hpp  Shader.hpp  VertexBuffer.hpp  Window.h
